k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kilo-guardian
  labels:
    name: kilo-guardian
